health-check/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-shapes-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    #nodePort: 30335
  selector:
    app: random-shapes
  #type: NodePort
