health-check/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  labels:
    app: health-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: health.cloud4azureaws.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: random-shapes-svc
            port:
              number: 80
  tls:
  - hosts:
    - health.cloud4azureaws.link
    secretName: health-secret
